<resources>
    <string name="app_name">UserCenter</string>
    <string name="user_center_s_phone_num">请输入手机号码</string>
    <string name="user_center_s_verification_code">获取验证码</string>
    <string name="user_center_s_msg_verify_code">请输入短信验证码</string>
    <string name="user_center_s_pwd_code">请输入密码(6–20位字母或数字)</string>
    <string name="user_center_s_again_pwd_code">请再次输入密码</string>
    <string name="user_center_s_register_btn">注册</string>
    <string name="user_center_s_login_in">登录</string>
    <string name="user_center_s_login_success">登录成功</string>
    <string name="user_center_s_pwd_not_conformity">两次密码输入不一致，请重新输入</string>
    <string name="user_center_s_phone_num_not_null">输入的手机号码不能为空</string>
    <string name="user_center_s_regex_phone_num">输入的手机号码格式不正确，请按正确格式输入</string>
    <string name="user_center_s_send_phone_success">发送成功</string>
    <string name="user_center_s_login_input_pwd">请输入密码</string>
    <string name="user_center_s_remember_pwd">记住密码</string>
    <string name="user_center_s_forget_pwd">忘记密码？</string>
    <string name="user_center_s_forgeted_pwd">忘记密码</string>
    <string name="user_center_s_reset_pwd">重置密码</string>
    <string name="user_center_s_copy_right">CopyRight @ Henry</string>
    <string name="user_center_s_next_step">下一步</string>
    <string name="user_center_s_input_pwd_again">请再次输入密码</string>
    <string name="user_center_s_confirm">确认</string>
    <string name="user_center_s_user_information">个人信息</string>
    <string name="user_center_s_head_portrait">头像</string>
    <string name="user_center_s_save">保存</string>
    <string name="user_center_s_nick_name">昵称</string>
    <string name="user_center_s_nick_name_hint">请称呼我</string>
    <string name="user_center_s_gender">性别</string>
    <string name="user_center_s_gender_man">男</string>
    <string name="user_center_s_gender_women">女</string>
    <string name="user_center_s_mobile_phone">手机</string>
    <string name="user_center_s_signature">签名</string>
    <string name="user_center_s_input_signature">请您填写签名</string>
</resources>
